[gd_scene load_steps=5 format=3 uid="uid://c1e08151bivtp"]

[ext_resource type="Script" path="res://scenes/settings/settings.gd" id="1_rmfeb"]

[sub_resource type="LabelSettings" id="LabelSettings_rdq3f"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_knfky"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_f4chg"]
font_size = 24

[node name="SettingsState" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rmfeb")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="StateName" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Настройки"
label_settings = SubResource("LabelSettings_rdq3f")
horizontal_alignment = 1

[node name="Win" type="PanelContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="Margin/VBox/Win"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Margin/VBox/Win/Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MouseSBox" type="HBoxContainer" parent="Margin/VBox/Win/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MouseSName" type="Label" parent="Margin/VBox/Win/Margin/VBox/MouseSBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Чувствительность мыши:"
label_settings = SubResource("LabelSettings_knfky")

[node name="MouseS" type="HSlider" parent="Margin/VBox/Win/Margin/VBox/MouseSBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 1
min_value = 0.01
max_value = 3.0
step = 0.01
value = 1.0

[node name="MouseSValue" type="Label" parent="Margin/VBox/Win/Margin/VBox/MouseSBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "	"
label_settings = SubResource("LabelSettings_f4chg")
horizontal_alignment = 1

[node name="ResetSettings" type="Button" parent="Margin/VBox/Win/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Сброс настроек"

[node name="Buttons" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Back" type="Button" parent="Margin/VBox/Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Назад"

[connection signal="value_changed" from="Margin/VBox/Win/Margin/VBox/MouseSBox/MouseS" to="." method="_on_mouse_s_value_changed"]
[connection signal="pressed" from="Margin/VBox/Win/Margin/VBox/ResetSettings" to="." method="_on_reset_settings_pressed"]
[connection signal="pressed" from="Margin/VBox/Buttons/Back" to="." method="_on_back_pressed"]
